# MandelbrotSet-OpenCL

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  benchmark.ipynb  kernal.cl  main.cpp  main_opencl.cpp  main_openmp.cpp  render.cpp  report.ipynb  speedup_result.txt  test.ipynb
output/: speedup_result.txt
